[gd_scene load_steps=28 format=3 uid="uid://crb03q1nc67a5"]

[ext_resource type="Script" uid="uid://cmoxfje1jniht" path="res://Scenes/Enemies/enemy.gd" id="1_4ra3w"]
[ext_resource type="Texture2D" uid="uid://con2ib6og4yc0" path="res://Sprites/Animations/LumberjackAxe/Swing/1.png" id="2_haro7"]
[ext_resource type="PackedScene" uid="uid://dxe21vp4h2x5w" path="res://Scenes/Enemies/ai_controller.tscn" id="2_md0e3"]
[ext_resource type="Script" uid="uid://bdfjgu45lufj7" path="res://Scenes/Enemies/hurtbox.gd" id="2_ycxl0"]
[ext_resource type="Texture2D" uid="uid://c7an7kfpcbjpo" path="res://Sprites/Animations/LumberjackAxe/Swing/2.png" id="3_56vhr"]
[ext_resource type="Script" uid="uid://cgipnjw8wdf7t" path="res://Scenes/hp_bar.gd" id="4_287tu"]
[ext_resource type="Texture2D" uid="uid://cjwbabuyl64vy" path="res://Sprites/Animations/LumberjackAxe/Swing/3.png" id="4_ta2yt"]
[ext_resource type="Texture2D" uid="uid://lwamejsqmrnc" path="res://Sprites/Animations/LumberjackAxe/Swing/4.png" id="5_m4x7e"]
[ext_resource type="Texture2D" uid="uid://bx6jj4w2nqbdq" path="res://Sprites/Animations/LumberjackAxe/Walk/1.png" id="6_vt4ob"]
[ext_resource type="Texture2D" uid="uid://cliew1vctgt4f" path="res://Sprites/Animations/LumberjackAxe/Walk/2.png" id="7_hgeoe"]
[ext_resource type="Texture2D" uid="uid://cpsij67kr4o7n" path="res://Sprites/Animations/LumberjackAxe/Walk/3.png" id="8_tk7xo"]
[ext_resource type="Texture2D" uid="uid://c5vifrj0qn0fx" path="res://Sprites/Animations/LumberjackAxe/Walk/4.png" id="9_scl1n"]
[ext_resource type="Texture2D" uid="uid://dh4a43xec0xjk" path="res://Sprites/Animations/Stun/1.png" id="11_xedeb"]
[ext_resource type="Script" uid="uid://cuuguingcuh6e" path="res://Scenes/Enemies/sound_player.gd" id="12_7ubbs"]
[ext_resource type="Texture2D" uid="uid://cfa40ms0aljj3" path="res://Sprites/Animations/Stun/2.png" id="12_kx2d8"]
[ext_resource type="Texture2D" uid="uid://dxjb7g3g1gyem" path="res://Sprites/Animations/Stun/3.png" id="13_lobkc"]
[ext_resource type="Texture2D" uid="uid://qsimkloemc5r" path="res://Sprites/Animations/Stun/4.png" id="14_y6od5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ycxl0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_md0e3"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4ra3w"]
radius = 13.038404

[sub_resource type="SpriteFrames" id="SpriteFrames_dhkrs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_haro7")
}, {
"duration": 1.0,
"texture": ExtResource("3_56vhr")
}, {
"duration": 1.0,
"texture": ExtResource("4_ta2yt")
}, {
"duration": 1.0,
"texture": ExtResource("5_m4x7e")
}],
"loop": false,
"name": &"swing",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_vt4ob")
}, {
"duration": 1.0,
"texture": ExtResource("7_hgeoe")
}, {
"duration": 1.0,
"texture": ExtResource("8_tk7xo")
}, {
"duration": 1.0,
"texture": ExtResource("9_scl1n")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_4dn76"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_xedeb")
}, {
"duration": 1.0,
"texture": ExtResource("12_kx2d8")
}, {
"duration": 1.0,
"texture": ExtResource("13_lobkc")
}, {
"duration": 1.0,
"texture": ExtResource("14_y6od5")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0830c"]
bg_color = Color(0.14509805, 0.14509805, 0.14509805, 0.6666667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ghaa6"]
bg_color = Color(0.772549, 0.176471, 0.156863, 1)

[sub_resource type="Animation" id="Animation_7ubbs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_beuat"]
resource_name = "fade"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 2.1435468, 38.05468),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ubbs"]
_data = {
&"RESET": SubResource("Animation_7ubbs"),
&"fade": SubResource("Animation_beuat")
}

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2309
script = ExtResource("1_4ra3w")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024
script = ExtResource("2_ycxl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_ycxl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_md0e3")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_4ra3w")

[node name="AttackCooldown" type="Timer" parent="HitBox"]
unique_name_in_owner = true
one_shot = true

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dhkrs")
animation = &"swing"
autoplay = "walk"
frame = 3
frame_progress = 1.0
offset = Vector2(0, 5)

[node name="StunSprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_4dn76")
autoplay = "default"
frame_progress = 0.878983

[node name="AIController" parent="." instance=ExtResource("2_md0e3")]
move_speed = 30

[node name="NavigationAgent2D" parent="AIController" index="0"]
path_postprocessing = 1
avoidance_enabled = true
radius = 5.0

[node name="HPBar" type="Node2D" parent="."]
script = ExtResource("4_287tu")
fade_out = true
max_hp = 10

[node name="ProgressBar" type="ProgressBar" parent="HPBar"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0830c")
theme_override_styles/fill = SubResource("StyleBoxFlat_ghaa6")
value = 30.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="HPBar"]
libraries = {
&"": SubResource("AnimationLibrary_7ubbs")
}

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="SoundPlayer" type="Node" parent="."]
script = ExtResource("12_7ubbs")

[connection signal="attack_started" from="." to="SoundPlayer" method="_on_enemy_attack_started"]
[connection signal="damaged" from="Hurtbox" to="." method="_on_hurtbox_damaged"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="HitBox/AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]

[editable path="AIController"]
